delete button no longer hidden on mobile

--- a/src/react/list/item/DeleteButton.scss
+++ b/src/react/list/item/DeleteButton.scss
@@ -4,7 +4,6 @@
   display: flex;
   align-content: center;
   justify-content: center;
-  opacity: 0;
   transition: opacity 200ms ease;
 
   .DeleteButton__inner {
