--- a/src/react/list/item/ListItem.scss
+++ b/src/react/list/item/ListItem.scss
@@ -8,11 +8,17 @@
   justify-content: flex-start;
   padding: 0 20px;
 
-  &:hover {
-    border-color: #7f7f7f;
-
+  @include minWidth($size-mobile) {
     .DeleteButton {
-      opacity: 1;
+      opacity: 0;
+    }
+
+    &:hover {
+      border-color: #7f7f7f;
+
+      .DeleteButton {
+        opacity: 1;
+      }
     }
   }
 
